# srmpi

./: README.md
src/: Makefile.am  configure.ac
src/include/: bit_ops.h  checks.h  constants.h  mirror_replica_mpi.h  mpi_linear_collectives.h  mpi_optimized_collectives.h  parallel_replica_mpi.h  replica_mpi_override.h  sendrecv_local.h  shared_replica_mpi.h  topo.h
src/lib/: Makefile.am  linear_allgather.c  linear_allgatherv.c  linear_allreduce.c  linear_alltoall.c  linear_alltoallv.c  linear_barrier.c  linear_bcast.c  linear_gather.c  linear_gatherv.c  linear_mpi_override.c  linear_reduce.c  linear_reduce_scatter.c  linear_scan.c  linear_scatter.c  linear_scatterv.c  list.h  mirror_replica_mpi.c  opt_allgather.c  opt_allgatherv.c  opt_allreduce.c  opt_alltoall.c  opt_alltoallv.c  opt_barrier.c  opt_bcast.c  opt_gather.c  opt_gatherv.c  opt_mpi_override.c  opt_reduce.c  opt_reduce_scatter.c  opt_scan.c  opt_scatter.c  opt_scatterv.c  parallel_replica_mpi.c  replica_mpi_override.c  send.c  sendrecv_local.c  shared_replica_mpi.c  topo.c
src/m4/: ax_hrtimer.m4  ax_mpi.m4  ax_portals.m4  ax_redstorm.m4  ax_wrap.m4
src/scripts/: run_simple_tests.sh
src/tests/: Makefile.am  allgather_test.c  allgatherv_test.c  allreduce_test.c  alltoall_test.c  anysource_test.c  bcast_test.c  gather_test.c  gatherv_test.c  reduce_scatter_test.c  reduce_test.c  scan_test.c  scatter_test.c  scatterv_test.c  send_test.c  simpleexample.c
